deployfolder/objects/SFDC_Investor__c.object
<CustomObject>
    <description>Any form of investor that may be associated with Target Companies.</description>
    <label>Investor</label>
    <nameField>
        <label>Investors Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Investors</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>Assets_Under_Management_M__c</fullName>
        <description>Total assets under management for the Investor.</description>
        <label>Assets Under Management ($M)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State / Province</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of investor.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Angel</fullName>
                </value>
                <value>
                    <fullName>Early / Mid Stage</fullName>
                </value>
                <value>
                    <fullName>Late Stage</fullName>
                </value>
                <value>
                    <fullName>Venture Debt</fullName>
                </value>
                <value>
                    <fullName>Buyout</fullName>
                </value>
                <value>
                    <fullName>Hedge Fund</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <label>Zip / Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>